--- a/datageneration/config
+++ b/datageneration/config
@@ -1,8 +1,8 @@
 [SYNTH_DATA]
-tmp_path           = '/home/emily/SURREAL/git_copy/surreal//temp'
-output_path        = '/home/emily/SURREAL/git_copy/surreal//out' 
-bg_path            = '/home/emily/SURREAL/git_copy/surreal//LSUN/'
-openexr_py2_path   = "/home/emily/SURREAL/git_copy/surreal//venv/lib/python2.7/dist-packages/OpenEXR-1.3.2-py2.7-linux-x86_64.egg"
+tmp_path           = '$USER_DIR/surreal/temp'
+output_path        = '$USER_DIR/surreal/out' 
+bg_path            = '$USER_DIR/surreal/LSUN/'
+openexr_py2_path   = "$USER_DIR/surreal/venv/lib/python2.7/dist-packages/OpenEXR-1.3.2-py2.7-linux-x86_64.egg"
 output_types       = {'depth':True, 'fg':False, 'gtflow':False, 'normal':False, 'segm':True, 'vblur':False}
 
 smpl_data_folder   = 'smpl_data'
